[package]
name = "actix-web-jwt"
description = "JWT validation middleware for actix-web"
keywords = ["actix", "middleware", "web", "jwt", "jwks"]
repository = "https://github.com/keaz/actix-web-jwt"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

authors = ["Kasun Ranasinghe <kasunranasinghe303@gmail.com>"]

readme = "README.md"
[dependencies]
actix-web = "4.3.1"
futures = "0.3.28"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["sync"] }

[dev-dependencies]
tokio =  { version = "1.28.2", features = ["full"] }
tokio-cron-scheduler = "0.9.4"
